# picasa-rs

./: .env  .env.test  .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md  diesel.toml  postgres.Dockerfile
.cursor/rules/: rust.mdc
cli/: Cargo.toml
cli/src/: cli.rs  cli_progress_reporter.rs  main.rs
config/: default.toml  testing.toml
core/: Cargo.toml
core/src/: config.rs  lib.rs
core/src/database/: mod.rs  schema.rs  sql_functions.rs
core/src/models/: city.rs  country.rs  face.rs  mod.rs  new_photo.rs  person.rs  photo.rs
core/src/repositories/: geo.rs  mod.rs
core/src/repositories/face/: repository.rs
core/src/repositories/person/: filters.rs  mod.rs  repository.rs
core/src/repositories/photo/: filters.rs  repository.rs
core/src/services/: face.rs  face_detection.rs  mod.rs  person.rs  photo_embedder.rs  photo_scanner.rs  photo_search.rs
core/src/services/embedders/: image.rs  mod.rs  text.rs
core/src/utils/: mod.rs  progress_reporter.rs
core/tests/: db.rs  face_repository_test.rs  geo_repository_test.rs  new_photo_test.rs  photo_repository_test.rs  photo_search_service_test.rs  utils.rs
core/tests/data/images/: sunrise_laos.heic
core/tests/data/images/sub/: desk_vietnam.heic
gui/: eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  vite.config.ts
gui/src/: App.tsx  bindings.ts  photoSearch.ts  routeTree.gen.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs  main.rs
gui/src-tauri/src/commands/: face.rs  mod.rs  person.rs  photo.rs
gui/src-tauri/src/services/: image.rs
gui/src-tauri/src/types/: face.rs  geo.rs  mod.rs  person.rs  photo.rs
mcp/: Cargo.toml
mcp/src/: main.rs
migrations/2025-06-08-064525_extensions/: down.sql
migrations/2025-06-08-070052_alter_countries_table/: up.sql
migrations/2025-06-08-070652_countries_index/: down.sql  up.sql
migrations/2025-06-08-080652_cities_table/: up.sql
migrations/2025-06-08-100652_cities_geom_column/: down.sql  up.sql
migrations/2025-06-08-110652_cities_index/: down.sql  up.sql
migrations/2025-06-09-064525_photos/: down.sql  up.sql
migrations/2025-06-09-064525_photos_table/: up.sql
migrations/2025-06-09-074025_find_country_id_by_geom_function/: down.sql  up.sql
migrations/2025-06-09-074525_set_photo_country_trigger/: down.sql  up.sql
migrations/2025-06-09-084025_find_city_id_by_geom_function/: down.sql  up.sql
migrations/2025-06-09-084525_set_photo_city_trigger/: down.sql  up.sql
migrations/2025-06-10-064525_similarity_search/: down.sql  up.sql
migrations/2025-06-23-131216_clear_embedding_on_hash_change/: down.sql  up.sql
migrations/2025-06-24-114909_find_country_geom_function/: down.sql  up.sql
migrations/2025-06-24-114909_find_country_id_by_name_function/: down.sql  up.sql
migrations/2025-06-24-114909_geospatial_search/: down.sql  up.sql
migrations/2025-06-25-114909_find_city_geom_function/: down.sql  up.sql
migrations/2025-06-25-114909_find_city_id_by_name_function/: down.sql  up.sql
migrations/2025-07-02-090226_people_table/: up.sql
migrations/2025-07-02-095545_faces_table/: down.sql  up.sql
migrations/2025-07-02-101736_update_people_updated_at_trigger/: down.sql  up.sql
migrations/2025-07-02-101742_update_faces_updated_at_trigger/: down.sql  up.sql
migrations/2025-07-03-094907_cluster_similar_faces_function/: down.sql  up.sql
python/face_detection/: face_detection_service.py  main.py  models.py  pyproject.toml
src/: cli.rs  lib.rs  main.rs  photo_repository.rs
src/database/: mod.rs  schema.rs
src/models/: city.rs  face.rs  face_cluster.rs  geospatial_search_result.rs  mod.rs  pagination.rs  photo.rs  semantic_search_result.rs
src/repositories/: geo.rs  mod.rs
src/services/: face_detection.rs  face_recognition.rs  geospatial_search.rs  mod.rs  photo_embedder.rs  photo_scanner.rs  photo_search.rs  semantic_search.rs
tests/: db.rs  face_repository_test.rs  geospatial_search.rs  new_photo_test.rs  photo.rs  photo_repository_test.rs  semantic_search.rs  utils.rs
(+43 files in other folders)
