[workspace]
members = ["core", "cli", "gui/src-tauri", "mcp"]
resolver = "3"


[workspace.dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.0", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = "2.2.0"
image = "0.25.6"
libheif-rs = { version = "2.2.0", default-features = false, features = [
    "v1_19",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

picasa-core = { path = "core" }
