[package]
name = "picasa-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
diesel_migrations.workspace = true
diesel.workspace = true
dotenvy.workspace = true
image.workspace = true
libheif-rs.workspace = true
serde_json.workspace = true
serde.workspace = true

r2d2 = "0.8"
ignore = "0.4.23"
nom-exif = "2.5.4"
blake3 = "1.5.4"
pgvector = { version = "0.4.1", features = ["diesel"] }
postgis_diesel = "3.0.1"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
tokenizers = { version = "0.21.1", default-features = false, features = [
    "onig",
] }
rayon = "1.10"
reqwest = { version = "0.12", features = ["json", "blocking"] }

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.20.0"
mockall = "0.13.1"
