[package]
name = "picasa-mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "picasa-mcp"
path = "src/main.rs"

[dependencies]
picasa-core.workspace = true
anyhow.workspace = true
rmcp = { version = "0.3.0", features = ["server", "transport-io"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.0", features = ["full"] }

