[package]
name = "picasa-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "picasa_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
picasa-core.workspace = true
anyhow.workspace = true
image.workspace = true
libheif-rs.workspace = true
serde_json.workspace = true
serde.workspace = true

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1.0", features = ["rt-multi-thread", "fs", "macros"] }
lru = "0.12"
specta = { version = "2.0.0-rc.21" }
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript"] }
specta-typescript = "0.0.9"
