[project]
name = "face-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.14",
    "insightface>=0.7.3",
    "onnxruntime>=1.22.0",
    "opencv-python>=4.12.0.88",
    "pillow-heif>=1.0.0",
    "pydantic>=2.11.7",
    "uvicorn>=0.34.0",
]
